[tool.poetry]
name = "sam-yapf"
version = "0.1.0"
description = "My attempt to create a custom YAPF style that can be overridden"
authors = ["Sam Roeca <samuel.roeca@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
sam-yapf = "sam_yapf:MAIN_SCRIPT"

[tool.poetry.dependencies]
python = "^3.7"
yapf = "^0.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
